force-app/main/default/objects/AR_Call_History__c/AR_Call_History__c.object-meta.xml
<CustomObject>
    <label>AR Call History</label>
    <nameField>
        <displayFormat>ARCH-{00000}</displayFormat>
        <label>ARCH#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR Call History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>