force-app/main/default/objects/AR_Call_History__c/fields/Call_Details__c.field-meta.xml
<CustomField>
    <fullName>Call_Details__c</fullName>
    <label>Call Details</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>