force-app/main/default/objects/AR_Call_History__c/fields/Creator_s_Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Creator_s_Functional_Group__c</fullName>
    <formula>TEXT(CreatedBy.Functional_Group__c)</formula>
    <label>Creator&apos;s Functional Group</label>
    <type>Text</type>
</CustomField>