force-app/main/default/objects/AR_Call_History__c/fields/Inbound_Type__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Type__c</fullName>
    <label>Inbound Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Customer Inquiry</fullName>
            </value>
            <value>
                <fullName>Internal Inquiry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>