force-app/main/default/objects/AR_Call_History__c/fields/Outbound_Type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Type__c</fullName>
    <label>Outbound Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Collection Call</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>