force-app/main/default/objects/AR_Call_History__c/fields/Subject_Details__c.field-meta.xml
<CustomField>
    <fullName>Subject_Details__c</fullName>
    <label>Subject Details</label>
    <length>100</length>
    <type>Text</type>
</CustomField>