force-app/main/default/objects/AR_Call_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Call_Type__c</columns>
    <columns>Inbound_Type__c</columns>
    <columns>Outbound_Type__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>